# maru

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release-bundles.yml  release-preflight.yml  release-skills.yml
docs/: BOUNDARIES.md  SSOT-TIERS.md  anchor-doctor.md  design-qa-graph.md  design-qa.md  diagram.md  e2e-flow-evidence.md  graph.md  maru-doctor.md
docs/design-qa/: measurements.json
e2e/: anchor-e2e-flow.spec.ts  binary-viewer.spec.ts  comms.spec.ts  diagram.spec.ts  graph-shell.spec.ts  graph.spec.ts  html-editor.spec.ts  smoke.spec.ts  startup.spec.ts  today-design-qa.spec.ts  today.spec.ts
e2e/helpers/: todayFixtures.ts
sample-vault/references/: anchor-glossary.md  report-rules.md
sample-vault/templates/: minutes-template.md
sample-workspace/: .anchorignore  2026-anchor-project-report.md  anchor-weekly-meeting.md
sample-workspace/references/: budget-codes.md  kpi-framework.md
sample-workspace/templates/: report-template.md
sample-workspace/type/: document.md  reference.md
scripts/: check-bundle-budget.mjs  check-macos-direct-distribution.mjs  e2e-mcp-smoke.mjs  lint-i18n.mjs  notarize-local-smoke.mjs  prune-tauri-debug.mjs  sign-macos-app-binaries.mjs  skills-bundle.mjs  update-homebrew-tap.mjs
sidecars/anchor-mcp/: index.mjs  package.json
skills/: README.md  SKILL_INDEX.md  manifest.json
skills/envs/default/: .gitignore  CLAUDE.md  Makefile  README.md  REFERENCE.md  VENV-SHARING.md  package.json  pnpm-lock.yaml  pyproject.toml  setup.sh
skills/envs/default/.claude/: settings.json
skills/envs/default/.claude/hooks/: init-env.sh
skills/envs/default/.claude/templates/: settings.json
skills/envs/default/scripts/: extract_all.py  extract_pdf.py  infuse-hooks.sh  ocr_pipeline.py  setup-jre.sh
skills/envs/default/scripts/utils/: __init__.py  file_detector.py
skills/lib/: build-graph.py  vault_adapter.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/skills-bootstrap/lib/: build-graph.py
src-tauri/skills-bootstrap/skills/hwpx/references/: capability-matrix.md  equation-syntax.md
src-tauri/skills-bootstrap/skills/hwpx/scripts/: hwpx_cli.py
src-tauri/skills-bootstrap/skills/hwpx/scripts/tests/: test_hwpx_contract.py
src-tauri/skills-bootstrap/skills/vault-connect/: SKILL.md
src-tauri/skills-bootstrap/skills/vault-extract/: SKILL.md
src-tauri/skills-bootstrap/skills/vault-graph/: SKILL.md
src-tauri/skills-bootstrap/skills/vault-learn/: SKILL.md
src-tauri/skills-bootstrap/skills/vault-lint/: SKILL.md
src-tauri/skills-bootstrap/skills/vault-rethink/: SKILL.md
src-tauri/src/: agent_runtime_env.rs  ai.rs  ai_router.rs  anchor_dir.rs  app_menu.rs  approval.rs  atomic_file.rs  binary_viewer.rs  calendar_search.rs  cli.rs  cli_path.rs  document.rs  e2e_flow.rs  evidence_binder.rs  file_manager.rs  filename_rules.rs  git.rs  gmail_gws.rs  graph_authoring.rs  html_editor.rs  inbox.rs  inbox_classifier.rs  inbox_drop.rs  inbox_settings.rs  inbox_watcher.rs  jobs.rs  kordoc_lite.rs  korean_date.rs  launchd_migration.rs  lib.rs  main.rs  maru_dir.rs  meetings.rs  mission_state.rs  outlook_mso.rs  scratchpad.rs  scratchpad_watcher.rs  secrets.rs  share_outbox.rs  shelf.rs  (+23 more)
src-tauri/src/agent_host/: cloud_dashboard.rs  contracts.rs  event_store.rs  marketplace.rs  mod.rs  proposal.rs  protected_write.rs  provider.rs  roles.rs  structured_loop.rs
src-tauri/src/diagram/: mod.rs
src-tauri/src/export/: dispatch.rs  manifest.rs  mod.rs  validate.rs
src-tauri/src/frontmatter/: mod.rs  ops.rs  ops_update_tests.rs  yaml.rs
src-tauri/src/hub_client/: cache.rs  catalog.rs  http.rs  mod.rs  safety.rs
src-tauri/src/linter/: gaejosik.rs  mod.rs
src-tauri/src/ops_catalog/: index.rs  mod.rs  scan.rs  watcher.rs
src-tauri/src/skill_host/: bundle_update.rs  dispatch.rs  env.rs  fs.rs  mod.rs  store.rs
src-tauri/src/studio/: mod.rs
src-tauri/src/terminal/: input.rs  mod.rs  model.rs  snapshot.rs
src/__tests__/: inboxKeyboard.test.tsx  writingGuideline.test.ts
src/approval/: ApprovalDialog.tsx
src/components/: AddVaultDialog.tsx  AddWorkspaceDialog.tsx  AiPanel.tsx  BinaryViewerPane.tsx  BulkActionBar.tsx  CommandPalette.tsx  CommitDialog.tsx  CommsPane.tsx  DocumentList.tsx  EditorPane.tsx  FavoritesSection.tsx  FilesWorkbench.tsx  GitStatusBadge.tsx  HtmlVisualEditor.test.tsx  HtmlVisualEditor.tsx  InboxPane.tsx  InboxSettingsDialog.tsx  LocaleToggle.tsx  MissionBadge.tsx  OutlinePane.tsx  (+16 more)
(+564 files in other folders)
