[package]
name = "anchor"
version = "0.2.9"
description = "Local-first Anchor Workspace and AI editing desktop app"
authors = ["Anchor Contributors"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "anchor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
portable-pty = "0.8"
rayon = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
