[package]
name = "maru"
version = "0.4.0"
description = "Local-first Maru Workspace and AI editing desktop app"
authors = ["Maru Contributors"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"
default-run = "maru"

[lib]
name = "maru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "maru"
path = "src/main.rs"

[[bin]]
name = "maru-cli"
path = "src/bin/maru-cli.rs"

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
alacritty_terminal = "0.26.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
encoding_rs = "0.8"
include_dir = "0.7"
mime_guess = "2"
notify = "6"
portable-pty = "0.8"
quick-xml = "0.39.2"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2.10.0", features = ["protocol-asset", "unstable"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tempfile = "3"
trash = "=4.1.1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }
