[project]
name = "chu-env"
version = "0.1.0"
description = "Shared runtime for document, graph, and workspace skills"
requires-python = ">=3.11"
dependencies = [
    # HWP 처리
    "libhwp>=0.1.0",
    "pyhwp>=0.1b15",
    "olefile>=0.47",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    # PDF 처리
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.10",
    "pdfplumber>=0.11.0",
    "pdfminer-six>=20221105",
    # HWP/HWPX → PDF/HTML 변환 shim (hwp-cli 렌더 → PDF, markdown → HTML)
    "img2pdf>=0.5.0",
    "markdown>=3.5",
    # OCR
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "pillow>=10.0.0",
    "ocrmypdf>=16.0.0",
    # pyhwp 런타임 의존성
    "six>=1.16.0",
    # 유틸리티
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    # YAML 처리 (project-registry.yaml 등)
    "pyyaml>=6.0",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    # Graph workflows
    "networkx>=3.0",
    "graphifyy>=0.4.18",
    "graspologic>=3.0",
    # Telegram
    "telethon>=1.36.0",
    "mcp-telegram>=0.1.0",
]

[tool.uv]
dev-dependencies = []
